--- a/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
+++ b/Source/Enter.UI/Components/Theme/EntThemeProvider.razor
@@ -21,7 +21,7 @@
         .AddClass("ent-ui")
         .AddClass("ent-rtl",Rtl)
         .AddClass("ent-ltr",!Rtl)
-        .AddClass("ent-dark-mode",DarkMode)
+        .AddClass("ent-theme-dark",DarkMode)
         .Build();
     
     [Inject]
