--- a/Source/Enter.UI/Styles/components/_ent_pagination.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_pagination.component.scss
@@ -12,14 +12,14 @@
         cursor: pointer;
         
         &.active {
-            background-color: $bg-primary;
-            color: $cl-light;
+            background-color: $color-primary;
+            color: $color-light;
             &:hover {
-                background-color: $bg-primary;
+                background-color: $color-primary;
             }
         }
          &:hover {
-            background-color: $bg-tertiary;
+            background-color: var(--ent-bg-tertiary);
         }
     }
     .ent-pagination-item:last-child {
