--- a/Source/Enter.UI/Styles/components/_ent_button.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_button.component.scss
@@ -1,214 +1,298 @@
 ﻿:root {
-  --ent-btn-border-size: var(--ent-border-width);
+  --ent-btn-border-width: var(--ent-border-width);
   --ent-btn-border-style: solid;
+  --ent-btn-border-color: var(--ent-primary);
+  --ent-btn-color: white;
+  --ent-btn-bg: var(--ent-primary);
+  --ent-btn-hover-bg: var(--ent-primary-text);
+  --ent-btn-hover-color: white;
+  --ent-btn-font-size: var(--ent-body-font-size);
+  --ent-btn-space-x: 1rem;
+  --ent-btn-space-y: 0.5rem;
+
+  --ent-btn-icon-bg: rgba(255, 255, 255, .1);
+  --ent-btn-icon-color: white;
+  
+}
+
+
+.ent-btn-primary {
+  --ent-btn-bg: var(--ent-primary);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-primary);
+  --ent-btn-hover-bg: var(--ent-primary-text);
+  --ent-btn-hover-color: white;
+
+  --ent-btn-icon-bg: var(--ent-primary-text);
+  --ent-btn-icon-color: white;
+}
+
+.ent-btn-light {
+  --ent-btn-bg: var(--ent-light);
+  --ent-btn-color: var(--ent-color-body);
+  --ent-btn-border-color: var(--ent-light);
+  --ent-btn-hover-bg: var(--ent-light-text);
+  --ent-btn-hover-color: var(--ent-color-body);
+
+}
+
+.ent-btn-dark {
+  --ent-btn-bg: var(--ent-dark);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-dark);
+  --ent-btn-hover-bg: var(--ent-dark-text);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-secondary {
+  --ent-btn-bg: var(--ent-secondary);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-secondary);
+  --ent-btn-hover-bg: var(--ent-secondary-text);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-success {
+  --ent-btn-bg: var(--ent-success);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-success);
+  --ent-btn-hover-bg: var(--ent-success-text);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-danger {
+  --ent-btn-bg: var(--ent-danger);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-danger);
+  --ent-btn-hover-bg: var(--ent-danger-text);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-warning {
+  --ent-btn-bg: var(--ent-warning);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-warning);
+  --ent-btn-hover-bg: var(--ent-warning-text);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-info {
+  --ent-btn-bg: var(--ent-info);
+  --ent-btn-color: white;
+  --ent-btn-border-color: var(--ent-info);
+  --ent-btn-hover-bg: var(--ent-info-text);
+  --ent-btn-hover-color: white;
+
+}
+
+
+// outline
+
+.ent-btn-outline-primary {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-primary);
+  --ent-btn-border-color: var(--ent-primary);
+  --ent-btn-hover-bg: var(--ent-primary);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-light {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-light);
+  --ent-btn-border-color: var(--ent-light);
+  --ent-btn-hover-bg: var(--ent-light);
+  --ent-btn-hover-color: var(--ent-dark);
+
+}
+
+.ent-btn-outline-dark {
+  --ent-btn-bg: transparent;
+  --ent-btn-color:  var(--ent-dark);
+  --ent-btn-border-color: var(--ent-dark);
+  --ent-btn-hover-bg: var(--ent-dark);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-secondary {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-secondary);
+  --ent-btn-border-color: var(--ent-secondary);
+  --ent-btn-hover-bg: var(--ent-secondary);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-success {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-success);
+  --ent-btn-border-color: var(--ent-success);
+  --ent-btn-hover-bg: var(--ent-success);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-danger {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-danger);;
+  --ent-btn-border-color: var(--ent-danger);
+  --ent-btn-hover-bg: var(--ent-danger);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-warning {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-warning);
+  --ent-btn-border-color: var(--ent-warning);
+  --ent-btn-hover-bg: var(--ent-warning);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-outline-info {
+  --ent-btn-bg: transparent;
+  --ent-btn-color: var(--ent-info);
+  --ent-btn-border-color: var(--ent-info);
+  --ent-btn-hover-bg: var(--ent-info);
+  --ent-btn-hover-color: white;
+
+}
+
+
+// soft
+
+.ent-btn-soft-primary {
+  --ent-btn-bg: var(--ent-primary-bg-subtle);
+  --ent-btn-color: var(--ent-primary);
+  --ent-btn-border-color: transparent;  
+
+}
+
+.ent-btn-soft-light {
+  --ent-btn-bg: var(--ent-light-bg-subtle);
+  --ent-btn-color: var(--ent-dark);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-dark);
+  --ent-btn-hover-color: var(--ent-color-body);
+
+}
+
+.ent-btn-soft-dark {
+  --ent-btn-bg: var(--ent-dark-bg-subtle);
+  --ent-btn-color: var(--ent-dark);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-dark);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-soft-secondary {
+  --ent-btn-bg: var(--ent-secondary-bg-subtle);
+  --ent-btn-color: var(--ent-secondary);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-secondary);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-soft-success {
+  --ent-btn-bg: var(--ent-success-bg-subtle);
+  --ent-btn-color: var(--ent-success);;
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-success);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-soft-danger {
+  --ent-btn-bg: var(--ent-danger-bg-subtle);
+  --ent-btn-color:  var(--ent-danger);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-danger);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-soft-warning {
+  --ent-btn-bg: var(--ent-warning-bg-subtle);
+  --ent-btn-color: var(--ent-warning);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-warning);
+  --ent-btn-hover-color: white;
+}
+
+.ent-btn-soft-info {
+  --ent-btn-bg: var(--ent-info-bg-subtle);
+  --ent-btn-color: var(--ent-info);
+  --ent-btn-border-color: transparent;
+  --ent-btn-hover-bg: var(--ent-info);
+  --ent-btn-hover-color: white;
+
+}
+
+
+.ent-btn-sm {
+  --ent-btn-space-x: 1rem;
+  --ent-btn-space-y: 0.375rem;
+}
+
+.ent-btn-lg {
+  --ent-btn-space-x: 1.5rem;
+  --ent-btn-space-y: 0.625rem;
 }
 
 .ent-btn {
 
+
   &:hover {
+    background-color: var(--ent-btn-hover-bg);
+    color: var(--ent-btn-hover-color);
+    transition: all 0.15s ease;
+
     .ent-btn-loading {
       animation: anim-ent-btn-spin-fast 1s infinite linear;
     }
   }
-  
-  .ent-btn-loading {
-    height: 1rem;
-    width: 1rem;
-    border-radius: 50%;
-    border: 0.15rem solid white;
-    border-left-color: transparent !important;
-    animation: anim-ent-btn-spin 1s infinite linear;
-    
-  }
 
-  padding: 0.625rem 1rem;
-  border: 0;
-  background-color: transparent;
-  font-size: 1rem;
+  transition: all 0.15s ease;
+  padding: var(--ent-btn-space-y) var(--ent-btn-space-x);
+  font-size: var(--ent-btn-font-size);
+  border: var(--ent-btn-border-width) var(--ent-btn-border-style) var(--ent-btn-border-color);
+  background-color: var(--ent-btn-bg);
+  color: var(--ent-btn-color);
+  fill: var(--ent-btn-color);
   display: flex;
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
   border-radius: $border-radius;
 
-  &.ent-btn-sm {
-    padding: .5rem 0.75rem;
-    font-size: map-get($font-sizes, "description");
-  }
 
-  &.ent-btn-lg {
-    padding: 0.75rem 1.25rem;
-    font-size: map-get($font-sizes, "caption");
-  }
+}
 
-  &.ent-btn-primary {
-    background-color: $bg-primary;
-    color: white;
-    .ent-btn-loading {
-      border-color: white;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $bg-primary;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $bg-primary;
-      .ent-btn-loading {
-        border-color: $bg-primary;
-      }
-      &:hover {
-        background-color: $bg-primary;
-        color: white;
-      }
-    }
 
-  }
+.ent-icon-btn {
+  position: relative;
+  padding-inline-start: calc(var(--ent-btn-space-x) + 2rem);
 
-  &.ent-btn-light {
-    background-color: $bg-light;
-    color: $cl-dark;
 
-    .ent-btn-loading {
-      border-color: $cl-dark;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $bg-light;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $bg-light;
-      .ent-btn-loading {
-        border-color: $bg-light;
-      }
-      &:hover {
-        background-color: $bg-light;
-        color: $cl-dark;
-      }
-    }
-
-  }
-
-  &.ent-btn-dark {
-    background-color: $bg-dark;
-    color: $cl-light;
-
-    .ent-btn-loading {
-      border-color: $cl-light;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $bg-dark;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $bg-dark;
-      .ent-btn-loading {
-        border-color: $bg-dark;
-      }
-      &:hover {
-        background-color: $bg-dark;
-        color: $cl-light;
-      }
+  &:hover {
+    .icon-wrapper {
+      background-color: rgba(255, 255, 255, .1) !important;
     }
   }
 
-  &.ent-btn-secondary {
-    background-color: $bg-secondary;
-    color: $cl-secondary;
-
-    .ent-btn-loading {
-      border-color: $cl-secondary;
-    }
+  .icon-wrapper {
+    position: absolute;
+    inset-inline-start: 0;
+    bottom: 0;
+    top: 0;
+    width: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--ent-btn-icon-bg);
     
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $bg-secondary;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $bg-secondary;
-      .ent-btn-loading {
-        border-color: $bg-secondary;
-      }
-      &:hover {
-        background-color: $bg-secondary;
-        color: $cl-secondary;
-      }
-    }
-
-  }
-
-  &.ent-btn-success {
-    background-color: $color-green-500;
-    color: white;
-
-    .ent-btn-loading {
-      border-color: white;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $color-green-500;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $color-green-500;
-      .ent-btn-loading {
-        border-color: $color-green-500;
-      }
-      &:hover {
-        background-color: $color-green-500;
-        color: white;
-      }
-    }
-
-  }
-
-  &.ent-btn-danger {
-    background-color: $color-red-500;
-    color: white;
-    .ent-btn-loading {
-      border-color: white;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $color-red-500;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $color-red-500;
-      .ent-btn-loading {
-        border-color: $color-red-500;
-      }
-      &:hover {
-        background-color: $color-red-500;
-        color: white;
-      }
-    }
-  }
-
-  &.ent-btn-warning {
-    background-color: $color-orange-500;
-    color: white;
-    .ent-btn-loading {
-      border-color: white;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $color-orange-500;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $color-orange-500;
-      .ent-btn-loading {
-        border-color: $color-orange-500;
-      }
-      &:hover {
-        background-color: $color-orange-500;
-        color: white;
-      }
-    }
-  }
-
-  &.ent-btn-info {
-    background-color: $color-sky-500;
-    color: white;
-    .ent-btn-loading {
-      border-color: white;
-    }
-    &.ent-btn-outline {
-      background-color: transparent;
-      color: $color-sky-500;
-      border: var(--ent-btn-border-size) var(--ent-btn-border-style) $color-sky-500;
-
-      .ent-btn-loading {
-        border-color: $color-sky-500;
-      }
-      &:hover {
-        background-color: $color-sky-500;
-        color: white;
-      }
+    .icon {
+      fill: var(--ent-btn-icon-color);
+      border-color: var(--ent-btn-icon-color);
+      color: var(--ent-btn-icon-color);
+     
     }
   }
 }
+
+
 
