--- a/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
@@ -22,7 +22,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  gap: 0.5rem;
+  gap: 0.25rem;
   
   .ent-toolbar-button {
     border: var(--ent-toolbar-border-width) var(--ent-toolbar-border-style) var(--ent-toolbar-border-color);
@@ -36,13 +36,7 @@
     cursor: pointer;
 
     .ent-toolbar-button-icon-loading {
-      height: 1rem;
-      width: 1rem;
-      border-radius: 50%;
-      border: 0.15rem solid var(--ent-color-body);
-      border-left-color: transparent !important;
-      animation: anim-ent-btn-spin 1s infinite linear;
-
+      border-color: var(--ent-color-body);
     }
     
     &:hover {
